# SOO

./: README.md  SOO.ipynb  pyproject.toml
.ipynb_checkpoints/: SOO-checkpoint.ipynb
